# ShiftFlow

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
admin_dashboard/: forms.py  urls.py  views.py
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_leave.py
shift_management/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/admin_dashboard/: create_employee_with_user.html  dashboard.html  employee_confirm_delete.html  employee_form.html  employee_list.html  leave_confirm_delete.html  leave_form.html  leave_list.html  shift_confirm_delete.html  shift_form.html  shift_list.html
templates/core/: create_employee_profile.html  employee_dashboard.html  home.html  login.html  register.html  update_employee_profile.html
