[project]
name = "shift-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crispy-tailwind>=1.0.3",
    "django>=5.2.5",
    "django-crispy-forms>=2.4",
    "gunicorn>=23.0.0",
    "psycopg[binary,pool]>=3.2.9",
    "python-decouple>=3.8",
    "whitenoise>=6.9.0",
]
